--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
-    <string name="app_name">HoanMy</string>
+    <string name="app_name">HM Service</string>
     <string name="alert_error_network">Network Error</string>
     <string name="login">Đăng nhập</string>
     <string name="add_job">Thêm công việc</string>
     <string name="add_time">Thêm thời gian</string>
+    <string name="add_minute">Thêm số phút</string>
+    <string name="extra_area">Khu vực làm việc...</string>
+    <string name="extra_floor">Tầng...</string>
     <string name="mota_login">Xin mời quý khách hàng đăng nhập để trải nghiệm dịch vụ của Hoàn Mỹ</string>
     <string name="hint_account_pass">Tài khoản</string>
     <string name="hint_password">Mật khẩu</string>
@@ -24,6 +27,26 @@
     <string name="text_tab_process">Đang làm</string>
     <string name="text_tab_done">Đã làm</string>
     <string name="text_job_done">Đã xong</string>
+    <string name="text_done_job">Hoàn Thành</string>
+    <string name="notification_task_done">Bạn chưa hoàn thành công việc nào.</string>
+    <string name="notification_task_process">Bạn đã hoàn thành hết công việc được giao.</string>
+    <string name="text_dialog_ok">Đồng ý</string>
+    <string name="text_dialog_cancel">Bỏ qua</string>
+    <string name="text_pause">Tạm dừng</string>
+    <string name="text_resume">Tiếp tục</string>
+    <string name="text_done">Hoàn thành</string>
+    <string name="text_extra">Phát sinh</string>
+    <string name="content_pause">Bạn có chắc chắn muốn tạm dừng công việc đang làm?</string>
+    <string name="content_resume">Bạn có chắc chắn muốn tiếp tục công việc đang làm?</string>
+    <string name="content_done">Bạn đã hoàn thành công việc đang làm?</string>
+    <string name="content_extra">Có công việc mới phát sinh cần làm?</string>
+    <string name="text_end_extra">Kết thúc việc phát sinh</string>
+    <string name="no_selection">no choice</string>
+    <string name="refresh_list_staff">Đang cập nhật lại thời gian công việc</string>
+    <string name="toast_done_job">Chưa tới thời gian làm công việc tiếp theo. </string>
+    <string name="default_notification_channel_id">chanel1</string>
+    <string name="msg_subscribed">đăng ký nhận thông báo thành công</string>
+    <string name="msg_subscribe_failed">đăng ký nhận thông báo thất bại</string>
 
     <string-array name="project_arr">
         <item>Tên Dự Án</item>
